@@ -1,3 +1,11 @@
+2008-09-15  Matthias Clasen  <mclasen@redhat.com>
+
+	Bug 551681 – g_content_type_guess() too naive with filenames
+
+	* gcontenttype.c (g_content_type_guess): Check whether there's a '/'
+	at the end of the filename, and declare it a directory.
+	Patch by Bastien Nocera
+
 2008-09-14  Cosimo Cecchi  <cosimoc@gnome.org>
 
 	Bug 551887 – Docs for g_desktop_app_info_new_from_filename ()
